--- a/index.html
+++ b/index.html
@@ -4,18 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio - Anna Robillard</title>
-    <link rel="stylesheet" href="src/styles.css">
+    <link rel="stylesheet" href="src/css/styles.css">
 </head>
 <body>
+
+    <!-- <div id="screen"></div> -->
 
     <header>
 
     </header>
 
     <section id="landing">
-        <h1>Portfolio</h1>
-        <h2 id="player">Player 1</h2>
-        <h2 id="name">Anna Robillard</h2>
+        <picture>
+            <img src="./src/img/me.png"/>
+            <div id="sphere"></div>
+            <div id="sphere2"></div>
+        </picture>
+
+        <div>
+            <h1>Portfolio</h1>
+            <h2 id="player">Player 1</h2>
+            <h2 id="name">Anna Robillard</h2>
+        </div>
+
     </section>
 
     <section id="cv">
@@ -23,7 +34,10 @@
     </section>
 
     <section id="levels">
-
+        <ul>
+            <li>Monde 1</li>
+            <li>Monde 2</li>
+        </ul>
     </section>
 
     <footer>
