--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio - Anna Robillard</title>
-    <link rel="stylesheet" href="src/css/styles.css">
+    <link rel="stylesheet" href="src/css/main.css">
 </head>
 <body>
 
@@ -15,16 +15,18 @@
     </header>
 
     <section id="landing">
-        <picture>
-            <img src="./src/img/me.png"/>
+        <div id="me">
+            <picture>
+                <img src="./src/img/robillard_anna.jpg"/>
+            </picture>
             <div id="sphere"></div>
             <div id="sphere2"></div>
-        </picture>
+        </div>
 
-        <div>
+        <div id="text">
             <h1>Portfolio</h1>
             <h2 id="player">Player 1</h2>
-            <h2 id="name">Anna Robillard</h2>
+            <h2 id="pseudo">Anna Robillard</h2>
         </div>
 
     </section>
