--- a/index.html
+++ b/index.html
@@ -70,6 +70,12 @@
         </section>
     
         <section id="levels">
+            <span id="start">
+                <h3>Start</h3>
+                <i>Click on the cards!</i>
+                <i>Scroll / Swipe</i>                
+            </span>
+
         </section>
     </section>
     
