--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <span id="start">
                 <h3>Start</h3>
                 <i>Click on the cards!</i>
-                <i>Scroll / Swipe</i>                
+                <i>Scroll (PC) - Swipe (Phone)</i>                
             </span>
 
         </section>
