--- a/index.html
+++ b/index.html
@@ -35,16 +35,16 @@
         <section id="cv">
 
             <ul id="hero-menu" class="user-none">
-                <li>Infos</li>
-                <li class="active">Skins</li>
+                <li class="active" data-index="0">Infos</li>
+                <li data-index="1">Skins</li>
                 <a href="./src/others/robillard_cv.pdf" download="robillard_anna_cv"><li class="cv">CV <img src="./src/svg/download.svg"/></li></a>
             </ul>
 
-            <div class="sub-section-cv">
-                
+            <div class="sub-section-cv active" data-index="0">
+                <h3>Infos</h3>
             </div>
 
-            <div class="sub-section-cv active">
+            <div class="sub-section-cv" data-index="1">
                 <h3>Skins</h3>
 
                 <div id="screen-hero">
@@ -77,7 +77,7 @@
     
         <section id="levels">
             <span id="start">
-                <h3>Start</h3>
+                <h3>Start!</h3>
                 <i>Click on the cards!</i>
                 <i>Scroll (PC) - Swipe (Phone)</i>                
             </span>
